--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <p>Select one option:</p>
 
 <ul>
-  <li><a href="bike.html">Which bike suits you best?</a></li>
-  <li><a href="zodiac.html">Know your zodiac sign</a></li>
+  <li><a href="church.html">Which Church Should You Go To?</a></li>
+  <li><a href="career.html">What Career Should You Pursue?</a></li>
   <li><a href="music.html">Which music genre suits you best?</a></li>
 </ul>
 
